--- a/package.json
+++ b/package.json
@@ -1,14 +1,12 @@
 {
   "name": "cloudCameraServices",
-  "version": "0.0.1",
-  "description": "",
+  "version": "0.0.2",
+  "description": "ERROR: No README data found!",
   "main": "server.js",
   "dependencies": {
-    "fluent-ffmpeg": "~1.5.2",
     "express": "~3.4.8",
     "imagemagick": "~0.1.3",
     "path": "~0.4.9",
-    "util": "~0.10.2",
     "thumb-express": "~0.0.2"
   },
   "devDependencies": {},
